[gd_scene load_steps=8 format=3 uid="uid://dcid4y3ew70yn"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_psp8s"]
[ext_resource type="Script" path="res://scripts/main_camera.gd" id="2_lkdnu"]
[ext_resource type="PackedScene" uid="uid://c7hmuu2lpdj4w" path="res://scenes/ui.tscn" id="2_tol41"]
[ext_resource type="Script" path="res://scripts/map_loader.gd" id="3_c8yh4"]
[ext_resource type="Texture2D" uid="uid://d4b3170qpi5bv" path="res://sprites/yoink.png" id="3_kxlrm"]
[ext_resource type="PackedScene" uid="uid://c1hvtim0lp634" path="res://scenes/map_empty.tscn" id="4_nfunt"]
[ext_resource type="Script" path="res://scripts/idle_projectile_manager.gd" id="5_78sfb"]

[node name="Root" type="Node"]
script = ExtResource("1_psp8s")

[node name="PlayersContainer" type="Node" parent="."]

[node name="IdleProjectileManager" type="Node" parent="."]
script = ExtResource("5_78sfb")

[node name="MapLoader" type="Node" parent="."]
script = ExtResource("3_c8yh4")

[node name="MapRoot" parent="MapLoader" instance=ExtResource("4_nfunt")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 640)
script = ExtResource("2_lkdnu")

[node name="UI" parent="Camera2D" instance=ExtResource("2_tol41")]
offset_left = -576.0
offset_top = -326.0
offset_right = -536.0
offset_bottom = -286.0

[node name="Parallax2D" type="Parallax2D" parent="Camera2D"]
scale = Vector2(0.8, 0.8)
scroll_scale = Vector2(0.2, 0.2)

[node name="Background" type="Sprite2D" parent="Camera2D/Parallax2D"]
z_index = -10
position = Vector2(-1024, -1024)
scale = Vector2(2, 2)
texture = ExtResource("3_kxlrm")

[node name="Background2" type="Sprite2D" parent="Camera2D/Parallax2D"]
z_index = -10
position = Vector2(-1024, 1024)
scale = Vector2(2, 2)
texture = ExtResource("3_kxlrm")

[node name="Background3" type="Sprite2D" parent="Camera2D/Parallax2D"]
z_index = -10
position = Vector2(1024, -1024)
scale = Vector2(2, 2)
texture = ExtResource("3_kxlrm")

[node name="Background4" type="Sprite2D" parent="Camera2D/Parallax2D"]
z_index = -10
position = Vector2(1024, 1024)
scale = Vector2(2, 2)
texture = ExtResource("3_kxlrm")
